# Phantom_bootstrapping

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: PhantomBootstrappingConfig.cmake.in  phantom-fhe.patch
example/: 3_ckks.cu  5_bootstrapping.cu  6_nn.cu  CMakeLists.txt  example.cu  example.h
include/: ckks_evaluator.cuh  utils.cuh
include/bootstrapping/: Bootstrapper.cuh  ModularReducer.cuh  RemezArcsin.cuh  RemezCos.cuh
include/bootstrapping/common/: Choosemax.cuh  MinicompFunc.cuh  MinicompRemez.cuh  Point.cuh  PolyUpdate.cuh  Polynomial.cuh  Remez.cuh  RemezApp.cuh  func.cuh
include/nn/: argmax.cuh  gelu.cuh  layer_norm.cuh  matrix_mul.cuh  softmax.cuh
src/: ckks_evaluator.cu
src/bootstrapping/: Bootstrapper.cu  ModularReducer.cu
src/bootstrapping/common/: Choosemax.cu  MinicompFunc.cu  MinicompRemez.cu  Point.cu  PolyUpdate.cu  Polynomial.cu  Remez.cu  RemezApp.cu  func.cu
